chore: updated readme

--- a/example/iife-example.html
+++ b/example/iife-example.html
@@ -10,7 +10,7 @@
 
     <canvas id="smokey-fluid-canvas"></canvas>
 
-    <script src="smokey-fluid-cursor/index.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/smokey-fluid-cursor@latest/dist/index.global.js"></script>
 
     <script type="module">
       window.addEventListener("DOMContentLoaded", () => {
