--- a/example/module-example.html
+++ b/example/module-example.html
@@ -11,7 +11,7 @@
     <canvas id="smokey-fluid-canvas"></canvas>
 
     <script type="module">
-      import { initFluid } from "smokey-fluid-cursor/index.mjs";
+      import { initFluid } from "https://cdn.jsdelivr.net/npm/smokey-fluid-cursor@latest/dist/index.mjs";
 
       window.addEventListener("DOMContentLoaded", () => {
         initFluid();
